--- a/src/layouts/LayoutMD.astro
+++ b/src/layouts/LayoutMD.astro
@@ -25,7 +25,7 @@ import { ClientRouter } from "astro:transitions";
     <!-- Fondo modo oscuro  -->
     <!-- Gradiente que se queda fijo arriba -->
     <div
-      class="hidden dark:block absolute top-0 left-0 w-full h-96 -z-10 bg-no-repeat bg-[radial-gradient(ellipse_80%_120%_at_50%_0%,rgba(120,119,198,0.3),rgba(0,0,0,0))]"
+      class="hidden dark:block absolute top-0 left-0 w-full min-h-screen -z-10 bg-no-repeat bg-[radial-gradient(ellipse_80%_120%_at_50%_0%,rgba(120,119,198,0.3),rgba(0,0,0,0))]"
     >
     </div>
 
@@ -36,33 +36,19 @@ import { ClientRouter } from "astro:transitions";
     </div>
 
     <Header />
-    <main class="w-full h-full mt-16">
+    <main class="">
       <slot />
     </main>
   </body>
 </html>
 
 <style>
-  @font-face {
-    font-family: 'ones';
-    src: url('/Onest-Variable.ttf');
-  }
   html,
   body {
     margin: 0;
     width: 100%;
     min-height: 100%;
-    font-family: 'ones';
-  }
-
-  /* Oculta la barra de scroll pero mantiene el scroll funcional */
-  html  {
-    overflow-y: scroll; /* Asegura que el scroll esté activo */
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none; /* IE/Edge */
-  }
-
-  html::-webkit-scrollbar {
-    display: none; /* Chrome, Safari, Opera */
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   }
 </style>
